--- a/flipbook-maluchy-new/data/flipBook.html
+++ b/flipbook-maluchy-new/data/flipBook.html
@@ -27,7 +27,7 @@
 
 <body>
   
-	<div id="tmpLoading" style="width: 100%; height: 100%; position: absolute; z-index: -2;background:#323232;"></div>
+	<div id="tmpLoading" style="width: 100%; height: 100%; position: absolute; z-index: -2;background:#transparent;"></div>
 	<script src="javascript/config.js"></script>
 	<script src="javascript/LoadingJS.js"></script>
   <script src="javascript/resource_skeleton.js"></script>
