flipbook-kutis: restore desktop toolbar visibility; limit phone toolbar/arrow hiding to mobile via media query

--- a/flipbook-kutis/data/flipBook.html
+++ b/flipbook-kutis/data/flipBook.html
@@ -49,8 +49,13 @@
                 </script>
 	
   <style>
-    /* Hide mobile phone toolbars */
-    .phoneTopBar, .phoneBottomBar { display: none !important; visibility: hidden !important; pointer-events: none !important; }
+    /* Desktop: keep built-in bars visible */
+    .fbBoardBar, .pageBar { display: block !important; visibility: visible !important; pointer-events: auto !important; }
+    /* Mobile: hide phone toolbars and overlay arrows */
+    @media (hover: none) and (pointer: coarse), (max-width: 900px) {
+      .phoneTopBar, .phoneBottomBar,
+      .flip_button_left, .flip_button_right { display: none !important; visibility: hidden !important; pointer-events: none !important; }
+    }
   </style>
 
   <!-- Force-hide mobile toolbars, including dynamically created elements -->
