--- a/flipbook-kutis/data/flipBook.html
+++ b/flipbook-kutis/data/flipBook.html
@@ -60,8 +60,8 @@
   <style>
     /* Desktop: keep built-in bars visible */
     .fbBoardBar, .pageBar { display: block !important; visibility: visible !important; pointer-events: auto !important; }
-    /* Mobile: hide phone toolbars and overlay arrows */
-    @media (hover: none) and (pointer: coarse), (max-width: 900px) {
+    /* Mobile (touch): hide phone toolbars and overlay arrows */
+    @media (hover: none) and (pointer: coarse) {
       .phoneTopBar, .phoneBottomBar,
       .flip_button_left, .flip_button_right { display: none !important; visibility: hidden !important; pointer-events: none !important; }
     }
@@ -72,7 +72,7 @@
   (function forceHidePhoneBars(){
     // Only apply on mobile/touch
     var isMobile = false;
-    try { isMobile = window.matchMedia('(hover: none) and (pointer: coarse), (max-width: 900px)').matches; } catch(e) {}
+    try { isMobile = window.matchMedia('(hover: none) and (pointer: coarse)').matches; } catch(e) {}
     if(!isMobile) return;
     function killBars(){
       try{
