--- a/flipbook-kutis/data/Žurnalas KUTIS.html
+++ b/flipbook-kutis/data/Žurnalas KUTIS.html
@@ -19,8 +19,8 @@
     <style>
       /* Desktop: keep built-in bars visible */
       .fbBoardBar, .pageBar { display: block !important; visibility: visible !important; pointer-events: auto !important; }
-      /* Mobile: hide phone toolbars and overlay arrows */
-      @media (hover: none) and (pointer: coarse), (max-width: 900px) {
+      /* Mobile (touch): hide phone toolbars and overlay arrows */
+      @media (hover: none) and (pointer: coarse) {
         .phoneTopBar, .phoneBottomBar,
         .flip_button_left, .flip_button_right { display: none !important; visibility: hidden !important; pointer-events: none !important; }
       }
@@ -73,7 +73,7 @@
   (function forceHidePhoneBars(){
     // Only apply on mobile/touch
     var isMobile = false;
-    try { isMobile = window.matchMedia('(hover: none) and (pointer: coarse), (max-width: 900px)').matches; } catch(e) {}
+    try { isMobile = window.matchMedia('(hover: none) and (pointer: coarse)').matches; } catch(e) {}
     if(!isMobile) return;
     function killBars(){
       try{
