--- a/flipbook-kutis/data/flipBook.html
+++ b/flipbook-kutis/data/flipBook.html
@@ -34,9 +34,9 @@
 	  })();
 	</script>
 	<script src="javascript/LoadingJS.js"></script>
-	<script src="javascript/main_preview.js"></script>
-	<script src="javascript/BookPreview.js"></script>
-	<script src="javascript/editor.js"></script>
+    <script src="javascript/main_preview.js?v=20251210"></script>
+    <script src="javascript/BookPreview.js?v=20251210"></script>
+    <script src="javascript/editor.js?v=20251210"></script>
 	<script src="files/search/book_config.js"></script>
 	<script type="text/javascript">var sendvisitinfo = function (type, page) { };</script>
 	<script src="javascript/FlipBookPlugins.min.js"></script>
