--- a/flipbook-maluchy-new/data/flipBook.html
+++ b/flipbook-maluchy-new/data/flipBook.html
@@ -28,12 +28,12 @@
 <body>
   
 	<div id="tmpLoading" style="width: 100%; height: 100%; position: absolute; z-index: -2;background:#transparent;"></div>
-	<script src="javascript/config.js"></script>
-	<script src="javascript/LoadingJS.js"></script>
-  <script src="javascript/resource_skeleton.js"></script>
-	<script type="text/javascript" src="javascript/editor.js"></script>
-  <script type="text/javascript" src="javascript/BookPreview.js"></script>
-	<script type="text/javascript" src="files/search/book_config.js"></script>
+    <script src="javascript/config.js?v=20251210"></script>
+    <script src="javascript/LoadingJS.js?v=20251210"></script>
+    <script src="javascript/resource_skeleton.js?v=20251210"></script>
+    <script type="text/javascript" src="javascript/editor.js?v=20251210"></script>
+    <script type="text/javascript" src="javascript/BookPreview.js?v=20251210"></script>
+    <script type="text/javascript" src="files/search/book_config.js?v=20251210"></script>
 	<script type="text/javascript">var sendvisitinfo = function (type, page) { };</script>
   <script type="text/javascript">
 		window.readerConfigLoaded = true;
