--- a/flipbook-napero/data/flipBook.html
+++ b/flipbook-napero/data/flipBook.html
@@ -32,16 +32,16 @@
   
 	<div id="tmpLoading" style="width: 100%; height: 100%; position: absolute; z-index: -2;background:'%backgroundColor%';"></div>
 	<!-- <script src="javascript/jquery-3.5.1.min.js"></script> -->
-	<script src="javascript/config.js"></script>
-	<script src="javascript/LoadingJS.js"></script>
-  <script src="javascript/resource_skeleton.js"></script>
+    <script src="javascript/config.js?v=20251210"></script>
+    <script src="javascript/LoadingJS.js?v=20251210"></script>
+    <script src="javascript/resource_skeleton.js?v=20251210"></script>
 	<!-- <script type="text/javascript" src="javascript/deString.js"></script> -->
 	<!-- <script type="text/javascript" src="javascript/book.min.js"></script> -->
 	<!-- <script type="text/javascript" src="javascript/pageItems.min.js"></script> -->
 	<!-- <script type="text/javascript" src="javascript/main.min.js"></script> -->
-	<script type="text/javascript" src="javascript/editor.js"></script>
-  <script type="text/javascript" src="javascript/BookPreview.js"></script>
-	<script type="text/javascript" src="files/search/book_config.js"></script>
+    <script type="text/javascript" src="javascript/editor.js?v=20251210"></script>
+    <script type="text/javascript" src="javascript/BookPreview.js?v=20251210"></script>
+    <script type="text/javascript" src="files/search/book_config.js?v=20251210"></script>
 	<script type="text/javascript">var sendvisitinfo = function (type, page) { };</script>
 	<!-- <script type="text/javascript" async src="javascript/FlipBookPlugins.min.js"></script> -->
 	<!-- <script type="text/javascript" defer src="javascript/flipHtml5.hiSlider2.min.js"></script> -->
