global: add mobile nav scripts

--- a/flipbook-kipars/data/flipBook.html
+++ b/flipbook-kipars/data/flipBook.html
@@ -180,6 +180,67 @@
 	})();
 	</script>
 
+
+	<script>
+		(function enableFlipbookMobileControls() {
+			function dispatch(direction, attempt) {
+				if (attempt > 10) {
+					return;
+				}
+				if (direction === 'next' && typeof window.nextPageFun === 'function') {
+					window.nextPageFun('mobile controls');
+					return;
+				}
+				if (direction === 'prev' && typeof window.previousPageFun === 'function') {
+					window.previousPageFun('mobile controls');
+					return;
+				}
+				setTimeout(function () {
+					dispatch(direction, attempt + 1);
+				}, 150);
+			}
+			function handleFlipbookNav(event) {
+				if (!event || !event.data || event.data.type !== 'flipbook-nav') {
+					return;
+				}
+				dispatch(event.data.dir, 0);
+			}
+			window.addEventListener('message', handleFlipbookNav, false);
+		})();
+	</script>
+
+	<script>
+		(function dismissClickToRead() {
+			var dismissDelay = 3000;
+			var pollDelay = 250;
+			var attempts = 40;
+			function hideClickToRead(el) {
+				setTimeout(function () {
+					el.style.pointerEvents = 'none';
+					el.style.opacity = '0';
+					setTimeout(function () {
+						if (el.parentNode) {
+							el.parentNode.removeChild(el);
+						}
+					}, 500);
+				}, dismissDelay);
+			}
+			(function check() {
+				var el = document.querySelector('.clickToRead');
+				if (el) {
+					if (!el.style.transition) {
+						el.style.transition = 'opacity 300ms ease';
+					}
+					hideClickToRead(el);
+					return;
+				}
+				if (attempts-- > 0) {
+					setTimeout(check, pollDelay);
+				}
+			})();
+		})();
+	</script>
+
 </body>
 
 </html>
