--- a/flipbook-LV-2/data/flipBook.html
+++ b/flipbook-LV-2/data/flipBook.html
@@ -24,6 +24,15 @@
 <body>
 	<script src="javascript/jquery-3.5.1.min.js"></script>
 	<script src="javascript/config.js"></script>
+	<script>
+	  (function forceDesktopToolbar(){
+	    try{
+	      var isMobile = false;
+	      try { isMobile = window.matchMedia('(hover: none) and (pointer: coarse), (max-width: 900px)').matches; } catch(e) {}
+	      if(!isMobile && window.bookConfig){ bookConfig.toolbarAlwaysShow = "Yes"; }
+	    }catch(e){}
+	  })();
+	</script>
 	<script src="javascript/LoadingJS.js"></script>
 	<script src="javascript/main_preview.js"></script>
 	<script src="javascript/BookPreview.js"></script>
@@ -47,6 +56,144 @@
                         pdfjsLib.GlobalWorkerOptions.workerSrc = "javascript/pdf.worker.js";
                     }
                 </script>
+	
+  <style>
+    /* Desktop: keep built-in bars visible */
+    .fbBoardBar, .pageBar { display: block !important; visibility: visible !important; pointer-events: auto !important; }
+    /* Mobile (touch): hide phone toolbars and overlay arrows */
+    @media (hover: none) and (pointer: coarse) {
+      .phoneTopBar, .phoneBottomBar,
+      .flip_button_left, .flip_button_right { display: none !important; visibility: hidden !important; pointer-events: none !important; }
+    }
+  </style>
+
+  <!-- Force-hide mobile toolbars, including dynamically created elements -->
+  <script type="text/javascript">
+  (function forceHidePhoneBars(){
+    // Only apply on mobile/touch
+    var isMobile = false;
+    try { isMobile = window.matchMedia('(hover: none) and (pointer: coarse)').matches; } catch(e) {}
+    if(!isMobile) return;
+    function killBars(){
+      try{
+        var els = document.querySelectorAll('.phoneTopBar, .phoneBottomBar');
+        els.forEach(function(el){
+          try{ el.style.setProperty('display','none','important'); el.style.setProperty('visibility','hidden','important'); el.style.setProperty('pointer-events','none','important'); }catch(e){}
+          try{ if(el && el.parentNode) el.parentNode.removeChild(el); }catch(e){}
+        });
+      }catch(e){}
+    }
+    try{ if(window.bookConfig) bookConfig.ToolBarVisible = false; }catch(e){}
+    function killBars(){
+      try{
+        var els = document.querySelectorAll('.phoneTopBar, .phoneBottomBar, .flip_button_left, .flip_button_right');
+        els.forEach(function(el){
+          try{ el.style.setProperty('display','none','important'); el.style.setProperty('visibility','hidden','important'); el.style.setProperty('pointer-events','none','important'); }catch(e){}
+          try{ if(el && el.parentNode) el.parentNode.removeChild(el); }catch(e){}
+        });
+      }catch(e){}
+    }
+    killBars();
+    try{
+      var mo = new MutationObserver(killBars);
+      mo.observe(document.documentElement || document.body, {childList:true, subtree:true});
+    }catch(e){ setInterval(killBars, 500); }
+  })();
+  </script>
+
+  <!-- Listen for postMessage navigation commands (prev/next) -->
+  <script type="text/javascript">
+  (function bindPostMessageNav(){
+    function resolveBook(){
+      try{
+        if(window.book) return window.book;
+        if(window.BookInfo && typeof BookInfo.getBook === 'function'){
+          var b = BookInfo.getBook();
+          if(b){ window.book = b; return b; }
+        }
+      }catch(e){}
+      return null;
+    }
+    window.addEventListener('message', function(e){
+      if(!e || !e.data || e.data.type !== 'flipbook-nav') return;
+      var b = resolveBook();
+      var handled = false;
+      if(e.data.dir === 'next' && b && typeof b.nextPage === 'function') { b.nextPage(); handled = true; }
+      if(e.data.dir === 'prev' && b && typeof b.prevPage === 'function') { b.prevPage(); handled = true; }
+      if(!handled && typeof window.gotoPageFun === 'function'){
+        try{
+          var cur = (window.BookInfo && typeof BookInfo.getCurrentPageIndex==='function' && BookInfo.getCurrentPageIndex()) || 1;
+          var total = (window.bookConfig && window.bookConfig.totalPageCount) || 1;
+          var target = cur;
+          if(e.data.dir === 'next') target = Math.min(cur+1, total);
+          if(e.data.dir === 'prev') target = Math.max(cur-1, 1);
+          window.gotoPageFun(target, false, 'postMessage-fallback');
+        }catch(err){}
+      }
+    });
+  })();
+  </script>
+
+
+	<script>
+		(function enableFlipbookMobileControls() {
+			function dispatch(direction, attempt) {
+				if (attempt > 10) {
+					return;
+				}
+				if (direction === 'next' && typeof window.nextPageFun === 'function') {
+					window.nextPageFun('mobile controls');
+					return;
+				}
+				if (direction === 'prev' && typeof window.previousPageFun === 'function') {
+					window.previousPageFun('mobile controls');
+					return;
+				}
+				setTimeout(function () {
+					dispatch(direction, attempt + 1);
+				}, 150);
+			}
+			function handleFlipbookNav(event) {
+				if (!event || !event.data || event.data.type !== 'flipbook-nav') {
+					return;
+				}
+				dispatch(event.data.dir, 0);
+			}
+			window.addEventListener('message', handleFlipbookNav, false);
+		})();
+	</script>
+
+	<script>
+		(function dismissClickToRead() {
+			var dismissDelay = 3000;
+			var pollDelay = 250;
+			var attempts = 40;
+			function hideClickToRead(el) {
+				setTimeout(function () {
+					el.style.pointerEvents = 'none';
+					el.style.opacity = '0';
+					setTimeout(function () {
+						if (el.parentNode) {
+							el.parentNode.removeChild(el);
+						}
+					}, 500);
+				}, dismissDelay);
+			}
+			(function check() {
+				var el = document.querySelector('.clickToRead');
+				if (el) {
+					if (!el.style.transition) {
+						el.style.transition = 'opacity 300ms ease';
+					}
+					hideClickToRead(el);
+					return;
+				}
+				if (attempts-- > 0) {
+					setTimeout(check, pollDelay);
+				}
+			})();
+		})();
+	</script>
 	
 </body>
 
