--- a/flipbook-kipars/data/flipBook.html
+++ b/flipbook-kipars/data/flipBook.html
@@ -91,6 +91,25 @@
 	})();
 	</script>
 
+	<script>
+	  (function forceDesktopToolbar(){
+	    function applySetting(){
+	      if (!window.bookConfig) return false;
+	      try{ bookConfig.toolbarAlwaysShow = "Yes"; }catch(e){}
+	      return true;
+	    }
+	    var isMobile = false;
+	    try { isMobile = window.matchMedia('(hover: none) and (pointer: coarse), (max-width: 900px)').matches; } catch(e) {}
+	    if (isMobile) return;
+	    if (applySetting()) return;
+	    var attempts = 0;
+	    var timer = setInterval(function(){
+	      attempts += 1;
+	      if (applySetting() || attempts > 20) clearInterval(timer);
+	    }, 200);
+	  })();
+	</script>
+
 	<!-- UPLOAD_FLIP_BUILDER -->
 
 	<style>
