--- a/flipbook-maluchy-new/data/flipBook.html
+++ b/flipbook-maluchy-new/data/flipBook.html
@@ -29,6 +29,24 @@
   
 	<div id="tmpLoading" style="width: 100%; height: 100%; position: absolute; z-index: -2;background:#transparent;"></div>
     <script src="javascript/config.js?v=20251210"></script>
+    <script>
+	  (function forceDesktopToolbar(){
+	    function applySetting(){
+	      if (!window.bookConfig) return false;
+	      try{ bookConfig.toolbarAlwaysShow = "Yes"; }catch(e){}
+	      return true;
+	    }
+	    var isMobile = false;
+	    try { isMobile = window.matchMedia('(hover: none) and (pointer: coarse), (max-width: 900px)').matches; } catch(e) {}
+	    if (isMobile) return;
+	    if (applySetting()) return;
+	    var attempts = 0;
+	    var timer = setInterval(function(){
+	      attempts += 1;
+	      if (applySetting() || attempts > 20) clearInterval(timer);
+	    }, 200);
+	  })();
+	</script>
     <script src="javascript/LoadingJS.js?v=20251210"></script>
     <script src="javascript/resource_skeleton.js?v=20251210"></script>
     <script type="text/javascript" src="javascript/editor.js?v=20251210"></script>
